--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.github.olsdav.dasftp"
+    package="com.github.davols.dasftp"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0">
 
     <uses-sdk
         android:minSdkVersion="18"
@@ -15,19 +15,19 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Dasftp" >
+        android:theme="@style/Theme.Dasftp">
         <activity
 
-            android:name="com.github.olsdav.dasftp.MainActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
+            android:name="com.github.davols.dasftp.MainActivity"
+            android:label="@string/app_name">
+        <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ShareActivity" >
-            <intent-filter>
+        <activity android:name=".ShareActivity">
+        <intent-filter>
                 <data android:mimeType="image/*" />
 
                 <action android:name="android.intent.action.SEND" />
