--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:targetSdkVersion="19" />
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -20,14 +21,14 @@
 
             android:name="com.github.davols.dasftp.MainActivity"
             android:label="@string/app_name">
-        <intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".ShareActivity">
-        <intent-filter>
+            <intent-filter>
                 <data android:mimeType="image/*" />
 
                 <action android:name="android.intent.action.SEND" />
@@ -36,6 +37,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".SettingsActivity" />
+
+        <provider
+            android:name=".PictureUploadProvider"
+            android:authorities="com.github.davols.dasftp"></provider>
     </application>
 
 </manifest>
