--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,4 +19,5 @@ android {
 
 dependencies {
     compile files('libs/jsch-0.1.51.jar')
+    compile files('libs/crittercism_v4_5_1_sdkonly.jar')
 }
