--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.github.davols.dasftp"
-    android:versionCode="1"
-    android:versionName="1.0">
+    android:versionCode="2"
+    android:versionName="2.0" >
 
     <uses-sdk
-        android:minSdkVersion="18"
-        android:targetSdkVersion="19" />
+        android:minSdkVersion="14"
+        android:targetSdkVersion="21" />
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -14,21 +14,21 @@
     <uses-permission android:name="android.permission.READ_LOGS" />
 
     <application
+        android:supportsRtl="true"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Dasftp">
+        android:theme="@style/Theme.Dasftp" >a
         <activity
-
-            android:name="com.github.davols.dasftp.MainActivity"
-            android:label="@string/app_name">
+            android:name=".MainActivity"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ShareActivity">
+        <activity android:name=".ShareActivity" >
             <intent-filter>
                 <data android:mimeType="image/*" />
 
@@ -40,8 +40,15 @@
         <activity android:name=".SettingsActivity" />
 
         <provider
-            android:name=".PictureUploadProvider"
-            android:authorities="com.github.davols.dasftp"></provider>
+            android:name=".daSftpProvider"
+            android:authorities="com.github.davols.dasftp"
+            android:exported="false" />
+
+
+        <activity
+            android:name=".AddSiteActivity"
+            android:label="@string/title_activity_add_site" >
+        </activity>
     </application>
 
 </manifest>
